@@ -1,10 +1,11 @@
 package guru.springframework.controllers;
 
+import guru.springframework.commands.RecipeCommand;
+import guru.springframework.domain.Recipe;
 import guru.springframework.services.RecipeService;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.*;
 
 @Controller
 public class RecipeController {
@@ -15,10 +16,41 @@ public class RecipeController {
         this.recipeService = recipeService;
     }
 
-    @RequestMapping("/recipe/show/{id}")
+    @RequestMapping("/recipe/{id}/show")
     public String showById(@PathVariable String id, Model model){
-        model.addAttribute("recipe", recipeService.findById(new Long(id)));
+        Recipe recipe = recipeService.findById(Long.valueOf(id));
+        model.addAttribute("recipe", recipe);
 
         return "/recipe/show";
+    }
+//    to display the recipe form
+    @RequestMapping("/recipe/new")
+    public String newRecipe(Model model){
+        model.addAttribute("recipe", new RecipeCommand());
+
+        return "/recipe/recipeform";
+    }
+// handle post request
+//    using model attribute to bind form objects to recipeCommand
+//    @RequestMapping(name = "recipe", method = RequestMethod.POST) (OLD WAY)
+    @PostMapping
+    @RequestMapping("recipe")
+    public String saveOrUpdate(@ModelAttribute RecipeCommand command){
+        RecipeCommand savedCommand = recipeService.saveRecipeCommand(command);
+//        tells spring mvc to redirect to a specific url
+        return "redirect:/recipe/"+savedCommand.getId()+"/show";
+    }
+
+    @RequestMapping("/recipe/{id}/update")
+    public String updateRecipe(@PathVariable String id, Model model){
+        model.addAttribute("recipe", recipeService.findCommandById(Long.valueOf(id)));
+        return"recipe/recipeform";
+    }
+
+
+    @RequestMapping("/recipe/{id}/delete")
+    public String deleteRecipe(@PathVariable String id, Model model){
+        recipeService.deleteById(Long.valueOf(id));
+        return"redirect:/";
     }
 }
